# TAVERN-Stack

./: .gitignore  README.md  index.html  package-lock.json  package.json  publish.js  tailwind.config.js  vite.config.ts
src/: main.tsx
src/assets/components/: Navigation.tsx  ThemeSwitcher.tsx
src/assets/css/: index.css
src/assets/pages/: About.tsx
src/assets/providers/: ThemeProvider.tsx
src/assets/scss/: index.scss
templates/rust-actix/: Cargo.toml  package.json
templates/rust-actix/scripts/: dev.js
templates/rust-actix/src/: main.tsx
templates/rust-actix/src-actix/: asset_endpoint.rs  build.rs  http_error.rs  lib.rs  main.rs  test_endpoint.rs
templates/rust-axium/: Cargo.toml  package-lock.json  package.json
templates/rust-axium/scripts/: app.js  publish.js  run.js
templates/rust-axium/src-axium/: Cargo.toml
templates/rust-tauri/: Cargo.toml  package.json
templates/rust-tauri/src-tauri/: Cargo.toml  tauri.conf.json
templates/rust-tauri/src-tauri/src/: main.rs
