[package]
name = "{{project_name}}"
version = "{{version}}"
description = "{{description}}"
edition = "2021"

[[bin]]
name = "{{project_name}}"
path = "src-axium/main.rs"

[dependencies]
actix-web = { version = "4.9.0" }
actix-ws = "0.3.0"
actix-files = "0.6.6"
futures-util = "0.3.30"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0.125" }
env_logger = "0.11.5"

[build-dependencies]
cargo-watch = "8.5.2"
